# ST-3-----3823-1-3

./: .gitignore  CMakeLists.txt
.github/workflows/: cpplint.yml  release.yml
include/: TimedDoor.h
src/: CMakeLists.txt  TimedDoor.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
